add logo and copy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- favicon -->
     <link
       rel="shortcut icon"
-      href="./app/img/favicon-32x32.png"
+      href="./app/img/pw-icon-circle.png"
       type="image/x-icon"
     />
     <!-- animatxe.style cdn -->
@@ -18,7 +18,7 @@
     <!-- abstracts, home css -->
     <link rel="stylesheet" href="./app/css/abstracts.css" />
     <link rel="stylesheet" href="./app/css/home.css" />
-    <title>EasyBank Landing Page | FrontEndMentor</title>
+    <title>PARTNERwith</title>
   </head>
   <body>
     <!-- wrap page inside 1440 container -->
@@ -27,7 +27,7 @@
       <header>
         <nav class="navbar-nav container">
           <a class="logo" href="#">
-            <img src="./app/img/logo.svg" alt="EasyBank logo image" />
+            <img src="./app/img/PARTNERwith.svg" alt="EasyBank logo image" style="width: auto; height: 3rem;" />
           </a>
 
           <div class="navbar-overlay is-hidden"></div>
@@ -35,9 +35,9 @@
           <ul class="navbar-items navbar-mobile is-hidden animate__animated">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="#">Pricing</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="#">FAQ</a></li>
           </ul>
 
           <a class="navbar-click">
@@ -46,7 +46,7 @@
             <span></span>
           </a>
 
-          <a href="#" class="btn navbar-btn">Request Invite</a>
+          <a href="#" class="btn navbar-btn">Reach Out</a>
         </nav>
       </header>
 
@@ -60,13 +60,11 @@
           />
         </div>
         <div class="hero-intro container">
-          <h1>Next generation digital banking</h1>
+          <h1>Partnerships are built through conversation</h1>
           <p>
-            Take your financial life online. Your Easybank account will be a
-            one-stop-shop for spending, saving, budgeting, investing, and much
-            more.
+            Share your vision with a tool that helps you tell your story.
           </p>
-          <button class="btn-primary">Request Invite</button>
+          <button class="btn-primary">Reach Out</button>
         </div>
       </main>
 
