--- a/index.html
+++ b/index.html
@@ -1,242 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+    </style>
     <!-- favicon -->
     <link
-      rel="shortcut icon"
-      href="./app/img/pw-icon-circle.png"
-      type="image/x-icon"
+    rel="tab icon"
+    href="./app/img/pw-icon-circle.png"
+    type="image/x-icon"
     />
-    <!-- animatxe.style cdn -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <!-- abstracts, home css -->
-    <link rel="stylesheet" href="./app/css/abstracts.css" />
-    <link rel="stylesheet" href="./app/css/home.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>PARTNERwith</title>
-  </head>
-  <body>
-    <!-- wrap page inside 1440 container -->
-    <div class="easybank-landing-page">
-      <!-- navbar -->
-      <header>
-        <nav class="navbar-nav container">
-          <a class="logo" href="#">
-            <img src="./app/img/PARTNERwith.svg" alt="EasyBank logo image" style="width: auto; height: 3rem;" />
+</head>
+<body>
+  <!-- wrap page inside 1440 container -->
+  <div class="partnerwith-landing-page">
+  </div>
+  <header>
+      <nav class="navbar">
+        <div class="navbar__container">
+          <a class="logo" href="#home">
+            <img src="./app/img/PARTNERwith.svg" alt="PARTNERwith logo image" style="width: auto; height: 3.5rem;" />
           </a>
 
-          <div class="navbar-overlay is-hidden"></div>
-
-          <ul class="navbar-items navbar-mobile is-hidden animate__animated">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">FAQ</a></li>
+          <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span> <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="#about" class="navbar__links" id="home-page">About</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#pricing" class="navbar__links" id="about-page">Pricing</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#contact" class="navbar__links" id="contact-page">Contact</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#faq" class="navbar__links" id="faq-page">FAQ</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#contact" class="button__links" id="contact-page">
+                <button class="full-rounded">Reach Out</button>
+              </a>
+            </li>
           </ul>
-
-          <a class="navbar-click">
-            <span></span>
-            <span></span>
-            <span></span>
-          </a>
-
-          <a href="#" class="btn navbar-btn">Reach Out</a>
-        </nav>
-      </header>
-
-      <!-- hero section -->
-      <main class="hero-section">
-        <div class="hero-img">
-          <img
-            src="./app/img/image-mockups.png"
-            alt="foreground image with smartphone screens"
-            class="hero-img-top"
-          />
         </div>
-        <div class="hero-intro container">
-          <h1>Partnerships are built through conversation</h1>
-          <p>
-            Share your vision with a tool that helps you tell your story.
-          </p>
-          <button class="btn-primary">Reach Out</button>
+    </nav>
+    <main class="hero-section" id="home">
+      <div class="hero__container">
+        <h1 class="hero__heading">Fatherhood</h1>
+        <div class="logo">
+            <img src="images/Hope_Logo_Final_Symbol-White (1).png" alt="Logo">
         </div>
-      </main>
-
-      <!-- why choose easyBank section -->
-      <section class="cards-section">
-        <!-- section-title and p -->
-        <div class="cards-intro container">
-          <h2>Why choose Easybank?</h2>
-          <p>
-            We leverage Open Banking to turn your bank account into your
-            financial hub. Control your finances like never before.
-          </p>
-        </div>
-        <!-- cards -->
-        <div class="cards-wrapper container">
-          <div class="cards-item">
-            <img
-              src="./app/img/icons/icon-online.svg"
-              alt="online banking card icon"
-            />
-            <h4>Online Banking</h4>
-            <p>
-              Our modern web and mobile applications allow you to keep track of
-              your finances wherever you are in the world
-            </p>
-          </div>
-          <div class="cards-item">
-            <img
-              src="./app/img/icons/icon-budgeting.svg"
-              alt="simple budgeting card icon"
-            />
-            <h4>Simple Budgeting</h4>
-            <p>
-              See exactly where your money goes each month. Receive
-              notifications when you’re close to hitting your lim
-            </p>
-          </div>
-          <div class="cards-item">
-            <img
-              src="./app/img/icons/icon-onboarding.svg"
-              alt="fast onboarding card icon wtf"
-            />
-            <h4>Fast Onboarding</h4>
-            <p>
-              We don’t do branches. Open your account in minutes online and
-              start taking control of your finances right away.
-            </p>
-          </div>
-          <div class="cards-item">
-            <img src="./app/img/icons/icon-api.svg" alt="Open Api icon" />
-            <h4>Fast Onboarding</h4>
-            <p>
-              Manage your savings, investments, pension, and much more from one
-              account. Tracking your money has never been easier.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- latest articles section -->
-      <section class="blog-section container">
-        <h2>Latest Articles</h2>
-        <div class="blog-items-wrapper">
-          <div class="blog-item">
-            <img
-              class="issue-img"
-              src="./app/img/image-currency-fixed.jpg"
-              alt="image for blog item 1"
-            />
-            <div class="blog-item-text">
-              <small>By Claire Robinson</small>
-              <h5>Receive money in any currency with no fees</h5>
-              <p>
-                The world is getting smaller and we’re becoming more mobile. So
-                why should you be forced to only receive money in a single …
-              </p>
-            </div>
-          </div>
-          <div class="blog-item">
-            <img
-              src="./app/img/image-restaurant.jpg"
-              alt="image for blog article 2"
-            />
-            <div class="blog-item-text">
-              <small>By Wilson Hutton</small>
-              <h5>Treat yourself without worrying about</h5>
-              <p>
-                Our simple budgeting feature allows you to separate out your
-                spending and set realistic limits each month. That means you …
-              </p>
-            </div>
-          </div>
-          <div class="blog-item">
-            <img src="./app/img/image-plane.jpg" alt="img for blog article 3" />
-            <div class="blog-item-text">
-              <small>By Wilson Hutton</small>
-              <h5>Take your Easybank card wherever you go</h5>
-              <p>
-                We want you to enjoy your travels. This is why we don’t charge
-                any fees on purchases while you’re abroad. We’ll even show you
-                ...
-              </p>
-            </div>
-          </div>
-          <div class="blog-item">
-            <img
-              src="./app/img/image-confetti.jpg"
-              alt="image for blog article 4"
-            />
-            <div class="blog-item-text">
-              <small> By Claire Robinson</small>
-              <h5>Our invite-only Beta accounts are now live!</h5>
-              <p>
-                After a lot of hard work by the whole team, we’re excited to
-                launch our closed beta. It’s easy to request an invite through
-                the site ..
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- footer -->
-      <footer class="footer container">
-        <!-- footer logo -->
-        <a class="footer-logo" href="#">
-          <img src="./app/img/logo-invert.svg" alt="EasyBank logo on footer" />
-        </a>
-        <!-- footer social icons -->
-        <div class="footer-icons-social">
-          <img
-            src="./app/img/icons/icon-facebook.svg"
-            alt="small image for facebook"
-          />
-          <img
-            src="./app/img/icons/icon-youtube.svg"
-            alt="small image for yotube"
-          />
-          <img
-            src="./app/img/icons/icon-twitter.svg"
-            alt="small image for twitter"
-          />
-          <img
-            src="./app/img/icons/icon-pinterest.svg"
-            alt="small image for pinterest"
-          />
-          <img
-            src="./app/img/icons/icon-instagram.svg"
-            alt="small image for icon-instagram"
-          />
-        </div>
-        <!-- footer navbar -->
-        <ul class="footer-nav">
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
-        <!-- footer btn -->
-        <button class="btn-primary footer-btn">Request Invite</button>
-        <!-- footer cr -->
-        <p class="footer-copy">© Easybank. All Rights Reserved</p>
-      </footer>
-    </div>
-    <!-- FrontEndMentor footer -->
-    <div class="attribution container">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/mandriva19">Mandriva19</a>.
-    </div>
-    <script src="./app/js/app.js"></script>
-  </body>
+        <p class="hero__description">Women's Hope Medical Clinic</p>
+      </div>
+      <div class="hero-img">
+        <img
+          src="./app/img/sample-phone-screenshot.png"
+          alt="foreground image with smartphone screens"
+          class="hero-img-top"
+        />
+      </div>
+      <div class="hero-intro container">
+        <h1>Partnerships are built through conversation</h1>
+        <p>
+          Share your vision with a tool that helps you tell your story.
+        </p>
+        <button class="btn-primary">Reach Out</button>
+      </div>
+    </main>
+  </header>
+  <script src="app.js"></script>
+</body>
 </html>
