Create mobile first about css

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p>
             When it comes to sharing your vision and passion with others, we
             know the value of every conversation. Your personal PARTNERwith site
-            is designed first and foremost for your conversation with every
+            is designed first and foremost for your conversations with each
             potential partner you meet.
           </p>
         </div>
@@ -104,8 +104,9 @@
             <i class="fa-solid fa-mobile fa-3x"></i>
             <h4>Mobile First</h4>
             <p>
-              Every PARTNERwith site is built mobile first. Your personal site
-              is ready to help you tell your story at all times.
+              Every PARTNERwith site is built mobile first, yet can scale to any
+              size needed. Your personal site is ready to help you tell your
+              story at all times.
             </p>
           </div>
           <div class="about-item">
@@ -130,9 +131,9 @@
             <i class="fa-solid fa-people-group fa-3x"></i>
             <h4>Connect</h4>
             <p>
-              Your PARTNERwith site is specifically designed to help you share
-              your story and simplify your process, so you can focus on building
-              your team of partners.
+              We design each PARTNERwith site to help you share your story and
+              simplify your process, so you can focus on building your team of
+              partners.
             </p>
           </div>
         </div>
