edit html and css to use grid to adjust for laptop, tablet, and mobile uniquely

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           </div>
           <ul class="navbar__menu">
             <li class="navbar__item">
-              <a href="#about" class="navbar__links" id="home-page">About</a>
+              <a href="#about" class="navbar__links" id="about-page">About</a>
             </li>
             <li class="navbar__item">
-              <a href="#pricing" class="navbar__links" id="about-page"
+              <a href="#pricing" class="navbar__links" id="pricing-page"
                 >Pricing</a
               >
             </li>
@@ -66,12 +66,15 @@
       </nav>
 
       <!-- Hero Section -->
-      <main class="hero-section" id="home">
-        <div class="hero-container">
-          <h1 class="hero-heading">
-            Partnerships are built through conversation
-          </h1>
-          <p class="hero-description">
+      <main id="home" class="hero-section">
+        <!-- <div class="hero-container"> -->
+        <div class="hero-heading">
+          <!-- <h1 class="hero-heading"> -->
+          <h1>Partnerships are built through conversation</h1>
+        </div>
+        <div class="hero-description">
+          <!-- <p class="hero-description"> -->
+          <p>
             Share <u>your vision</u> with a tool that helps you tell
             <u>your story</u>.
           </p>
@@ -80,16 +83,15 @@
           <img
             src="./app/img/pw-coffee-insta-green-OFFwhite-NEW.png"
             alt="coffee shop"
-            style="max-width: 480px"
           />
         </div>
       </main>
 
       <!-- About Section  -->
-      <section class="about-section">
+      <section id="about" class="about-section">
         <!-- section-title and p -->
         <div class="about-intro">
-          <h2>The Tool You'll Keep Reaching For</h2>
+          <h2>Choose A Tool You'll Keep Reaching For</h2>
           <p>
             When it comes to sharing your vision and passion with others, we
             know the value of every conversation. Your personal PARTNERwith site
